{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 73,
  "lineage": "c1ecc63a-b951-6696-8f1a-aa472667276f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311141522144:internet-gateway/igw-01c3fcc7e3be2edfa",
            "id": "igw-01c3fcc7e3be2edfa",
            "owner_id": "311141522144",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-07902c584f04b1661"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.HR_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311141522144:route-table/rtb-0d7d659b0884e662a",
            "id": "rtb-0d7d659b0884e662a",
            "owner_id": "311141522144",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c3fcc7e3be2edfa",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07902c584f04b1661"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.HR_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0009051f4bd203df7",
            "route_table_id": "rtb-0d7d659b0884e662a",
            "subnet_id": "subnet-0db2e64fc6cd6718f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.HR_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HR_ec2_securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311141522144:security-group/sg-052f8b4b509e6a0ec",
            "description": "Security group for ECS container instances (EC2)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052f8b4b509e6a0ec",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from your IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to forward to application port",
                "from_port": 5004,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5004
              },
              {
                "cidr_blocks": [],
                "description": "Allow ALB to forward to dynamic ports",
                "from_port": 51678,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 51678
              }
            ],
            "name": "dev-hr-app-sg",
            "name_prefix": "",
            "owner_id": "311141522144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "dev-hr-app-sg",
              "Project": "hr"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-hr-app-sg",
              "Project": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-07902c584f04b1661"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.HR_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311141522144:subnet/subnet-0b557e4c423a4104c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b557e4c423a4104c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141522144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-hr-private-subnet-0",
              "Project": "hr"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-hr-private-subnet-0",
              "Project": "hr"
            },
            "vpc_id": "vpc-07902c584f04b1661"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.HR_VPC"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311141522144:subnet/subnet-043c4534602c88ee9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-043c4534602c88ee9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311141522144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-hr-private-subnet-1",
              "Project": "hr"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-hr-private-subnet-1",
              "Project": "hr"
            },
            "vpc_id": "vpc-07902c584f04b1661"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.HR_VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311141522144:subnet/subnet-0db2e64fc6cd6718f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db2e64fc6cd6718f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "311141522144",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "dev-hr-public-subnet",
              "Project": "hr"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-hr-public-subnet",
              "Project": "hr"
            },
            "vpc_id": "vpc-07902c584f04b1661"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.HR_VPC"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "HR_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311141522144:vpc/vpc-07902c584f04b1661",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00345b25c67e64ecd",
            "default_route_table_id": "rtb-00eb096fe25bee981",
            "default_security_group_id": "sg-0fb6750b857933ea2",
            "dhcp_options_id": "dopt-05f7025d396f8463e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07902c584f04b1661",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00eb096fe25bee981",
            "owner_id": "311141522144",
            "tags": {
              "Environment": "dev",
              "Name": "dev-hr-vpc",
              "Project": "hr"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-hr-vpc",
              "Project": "hr"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}